--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 		<label>Tag: </label><input type="text" name="tag"> (use like a search term)<br />
 		<input type="submit" value="submit" />
 	</form>
-	For <i>all</i> accounts, just leave the fields blank and click submit.
+	Lists the first 100 or fewer results.
 		
 	<p>preview:</p>
 	<%= erb :embed, :locals => {:url => @url }%>
